# ml-observability-platform

./: .gitignore  CASE_STUDY.md  Dockerfile  PREP.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
app/: app.py  drift_detector.py  prediction_store.py  requirements.txt
model/: push_to_hub.py  requirements.txt  train.py
scripts/: deploy_space.py  health_check.py  sync_reference_stats.py
tests/: test_drift.py
