[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-observability-platform"
version = "1.0.0"
description = "End-to-end MLOps pipeline with model monitoring and drift detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

# No packages to auto-discover — we use requirements.txt directly
[tool.setuptools.packages.find]
include = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
